--- a/index.html
+++ b/index.html
@@ -441,6 +441,21 @@ height="260"
     </li>
   </ul>
 </div>
+
+<div>
+  <form name="footer-newsletter">
+    <label class="footer-newsletter-title">
+      ZAPISZ SIĘ DO NEWSLETTERA
+      <input class="footer-newsletter-input" type="email" name="email" placeholder="E-mail"/>
+    </label>
+  <button class="footer-newsletter-btn" type="submit">Zapisz się
+    <svg class="footer-newsletter-icon" width="24px" height="24px">
+      <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+    </svg>
+  </button>
+  </form>
+</div>
+
 </div>
 
     </footer>
