--- a/index.html
+++ b/index.html
@@ -475,14 +475,14 @@ height="260"
       </label>
       <label>
         Telefon
-        <input type="tel" name="phone_number" />
+        <input class="modal-form" type="tel" name="phone_number" />
         <svg class="modal-icon" width="15px" height="15px">
           <use href="./images/symbol-defs.svg#icon-phone-black-18dp-1"></use>
         </svg>
       </label>
       <label>
         Email
-        <input type="email" name="email" />
+        <input class="modal-form" type="email" name="email" />
         <svg class="modal-icon" width="15px" height="15px">
           <use href="./images/symbol-defs.svg#icon-email-black-18dp-1"></use>
         </svg>
